feat: 연령 제한(19금) 방송 메타데이터 수집 지원 및 테스트 Fake 객체 전환
- 치지직 API에서 19금 방송을 메타데이터 수집 대상에 포함하고 adult 플래그 매핑
- 연령 제한 방송은 세션 통계(API 서버)에 반영하되, 인증 쿠키가 필요한 채팅 웹소켓 수집 대상에서는 제외
- IngestionServiceTest의 Mockito 기반 단위 테스트를 실제 도메인 객체 및 Fake 구현체로 전면 리팩토링